# shephard

frontend/llm-docs/: architecture-guide.md  development-guidelines.md  project-spec.md  styling-guide.md  testing-guide.md
llm-docs/: local-dev.md  product-spec.md  project-spec.md  system-spec.md
pipeline/: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  llms.txt  pyproject.toml
pipeline/.claude/commands/: generate-prp.md
pipeline/llm-docs/: artifact-system.md  chinese-translation.md  cli-usage.md  code-quality.md  local-dev.md  logging.md  model-configuration.md  project-spec.md  python-env.md  real-api-integration.md  youtube-integration.md
pipeline/llm-docs/PRPs/templates/: PRP_base.md  PRP_example.md
pipeline/shepard_pipeline/: __init__.py  demo.py
pipeline/shepard_pipeline/cli/: main.py
pipeline/shepard_pipeline/config/: settings.py
pipeline/shepard_pipeline/flows/: main_flows.py
pipeline/shepard_pipeline/models/: pipeline.py
pipeline/shepard_pipeline/services/: __init__.py  mock_apis.py  youtube_service.py
pipeline/shepard_pipeline/tasks/: __init__.py  audio_tasks.py  summarization_tasks.py  transcription_tasks.py
pipeline/shepard_pipeline/utils/: logging.py
pipeline/shepherd_pipeline/: __init__.py
pipeline/shepherd_pipeline/cli/: __main__.py  main.py
pipeline/shepherd_pipeline/config/: settings.py
pipeline/shepherd_pipeline/flows/: main_flows.py
pipeline/shepherd_pipeline/models/: pipeline.py
pipeline/shepherd_pipeline/services/: mock_apis.py  model_factory.py  translation_service.py
pipeline/shepherd_pipeline/services/llm_provider/: __init__.py  base_http_service.py  mistral_service.py  mock.py  openai_service.py  provider_configs.py  schema.py
pipeline/shepherd_pipeline/services/youtube/: mock.py  schema.py  service.py
pipeline/shepherd_pipeline/tasks/: audio_tasks.py  summarization_tasks.py  transcription_tasks.py
pipeline/shepherd_pipeline/utils/: __init__.py  artifact_manager.py
pipeline/tests/: conftest.py
pipeline/tests/integration/: test_flows.py
pipeline/tests/unit/: test_model_factory.py  test_models.py  test_services.py  test_translation_service.py
supabase/: config.toml
